--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
 }
 
 .logtime-label {
-    color: #9cdcfe;
+    /* color: #9cdcfe; */
     font-weight: 600;
     font-size: auto;
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.8);
